--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/headerStyle.css" rel="stylesheet">
     <link href="css/mainStyle.css" rel="stylesheet">
+    <link href="css/mobile.css" rel="stylesheet" type="text/css" media="(max-device-width:480px)" />
     <script src="js/script.js"></script> 
+
 </head>
 
 <body>
@@ -29,7 +31,7 @@
                         <a href="index.html">на головну</a>
                         <a href="index.html">на головну</a>
                         <a href="index.html">на головну</a>
-                        <a href="index.html">на головну</a>
+                        <a href="index.html">на </a>
                         <a href="index.html">на головну</a>
                         <a href="index.html">на головну</a>
                     </details>
@@ -85,7 +87,7 @@
         
         <h1 class="centring  centringpading" style="
      
-в
+
 font-size: 400%; 
  top: 10vh;
 bottom: 0;
