--- a/asd.html
+++ b/asd.html
@@ -1,13 +1,85 @@
-<form>
-    <p><input list="phonesList" type="text" name="model" placeholder="Введите модель" /></p>
-    <p>
-        <button type="submit">Отправить</button>
-    </p>
-</form>
-<datalist id="phonesList">
-    <option>     <form>
-    <p><input type="text" name="login" /></p>
-    <p><input type="password" name="password" /></p>
-    <input type="submit" value="Авторизация" />
-</form></option> 
-        </datalist>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.99">
+    <title>Document</title>
+</head>
+
+<body>
+    <div style="text-align: justify">
+        <script>
+
+            var arrA =
+                [
+                    [99, 8, 2, 99, 99, 99, 99],
+                    [99, 99, 1, 99, 6, 99, 99],
+                    [99, 99, 99, 3, 99, 99, 3],
+
+                    [99, 99, 99, 99, 99, 1, 1],
+                    [99, 99, 99, 99, 99, 2, 99],
+
+                    [99, 99, 99, 99, 99, 99, 99],
+                    [99, 2, 99, 99, 1, 99, 99],
+                ];
+            var arrB =
+                [
+                    [0, 0, 99, 99, 99, 99, 99, 99, 99],
+                    [99, 8, 99, 99, 99, 99, 99, 99, 99],
+                    [99, 2, 99, 99, 99, 99, 99, 99, 99],
+
+                    [99, 99, 99, 99, 9, 99, 99, 99, 99],
+                    [99, 99, 99, 99, 99, 99, 99, 99, 99],
+
+                    [99, 99, 99, 99, 99, 99, 99, 99, 99],
+                    [99, 99, 99, 99, 99, 99, 99, 99,99],
+                ];
+
+            for (let l = 2; l < 7; l++) {
+                for (let i = 0; i <7; i++) {
+                    arrB[i][l] = name(i, l);
+                }
+                 document.write("<br>");
+            }
+           
+            function name(a, b) {
+                var min = 99;
+                var str = "min{";
+                for (let i = 0; i <7; i++) {
+                    var vr = arrA[i][a] + arrB[i][b - 1];
+                    str += arrA[i][a] + " + " + arrB[i][b - 1]+", ";
+                    if (min > vr) { min = vr; }
+
+                }
+                document.write( min+" = "+str+"}<br>")
+                return min;
+            }
+            for (let i = 0; i < 7; i++) {
+                for (let l = 0; l < 7; l++) {
+
+
+                    document.write(arrB[i][l] + " - ")
+
+                }
+                document.write("<br>");
+            }
+            document.write("<br>");
+            document.write("<br>");
+            for (let i = 0; i < 7; i++) {
+                for (let l = 0; l <7; l++) {
+
+
+                    document.write(arrA[i][l] + " - ")
+
+                }
+                document.write("<br>");
+            }
+
+
+        </script>
+    </div>
+</body>
+
+</html>
