--- a/asd.html
+++ b/asd.html
@@ -11,71 +11,20 @@
 <body>
     <div style="text-align: justify">
         <script>
-
-            var arrA =
-                [
-                    [99, 8, 2, 99, 99, 99, 99],
-                    [99, 99, 1, 99, 6, 99, 99],
-                    [99, 99, 99, 3, 99, 99, 3],
-
-                    [99, 99, 99, 99, 99, 1, 1],
-                    [99, 99, 99, 99, 99, 2, 99],
-
-                    [99, 99, 99, 99, 99, 99, 99],
-                    [99, 2, 99, 99, 1, 99, 99],
-                ];
-            var arrB =
-                [
-                    [0, 0, 99, 99, 99, 99, 99, 99, 99],
-                    [99, 8, 99, 99, 99, 99, 99, 99, 99],
-                    [99, 2, 99, 99, 99, 99, 99, 99, 99],
-
-                    [99, 99, 99, 99, 9, 99, 99, 99, 99],
-                    [99, 99, 99, 99, 99, 99, 99, 99, 99],
-
-                    [99, 99, 99, 99, 99, 99, 99, 99, 99],
-                    [99, 99, 99, 99, 99, 99, 99, 99,99],
-                ];
-
-            for (let l = 2; l < 7; l++) {
-                for (let i = 0; i <7; i++) {
-                    arrB[i][l] = name(i, l);
-                }
-                 document.write("<br>");
-            }
-           
-            function name(a, b) {
-                var min = 99;
-                var str = "min{";
-                for (let i = 0; i <7; i++) {
-                    var vr = arrA[i][a] + arrB[i][b - 1];
-                    str += arrA[i][a] + " + " + arrB[i][b - 1]+", ";
-                    if (min > vr) { min = vr; }
-
-                }
-                document.write( min+" = "+str+"}<br>")
-                return min;
-            }
-            for (let i = 0; i < 7; i++) {
-                for (let l = 0; l < 7; l++) {
+   
+    var user = {
+        name: "Tom",
+        married: true,
+        age: 30
+    };
+    // сериализация
+    var serializedUser = JSON.stringify(user);
+    // десериализация
+    var tomUser = JSON.parse("https://alexreshetnik.github.io/web/");
+    
+    document.write(tomUser.name); // Tom
 
 
-                    document.write(arrB[i][l] + " - ")
-
-                }
-                document.write("<br>");
-            }
-            document.write("<br>");
-            document.write("<br>");
-            for (let i = 0; i < 7; i++) {
-                for (let l = 0; l <7; l++) {
-
-
-                    document.write(arrA[i][l] + " - ")
-
-                }
-                document.write("<br>");
-            }
 
 
         </script>
