--- a/asd.html
+++ b/asd.html
@@ -20,8 +20,8 @@
     // сериализация
     var serializedUser = JSON.stringify(user);
     // десериализация
-    var tomUser = JSON.parse("https://alexreshetnik.github.io/web/");
-    
+    var tomUser = JSON.parse("https://alexreshetnik.github.io/web/bd.json");
+
     document.write(tomUser.name); // Tom
 
 
