--- a/asd.html
+++ b/asd.html
@@ -4,30 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.99">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body>
-    <div style="text-align: justify">
-        <script>
-   
-    var user = {
-        name: "Tom",
-        married: true,
-        age: 30
-    };
-    // сериализация
-    var serializedUser = JSON.stringify(user);
-    // десериализация
-    var tomUser = JSON.parse("https://alexreshetnik.github.io/web/bd.json");
-
-    document.write(tomUser.name); // Tom
-
-
-
-
-        </script>
+    <div
+        style=" width: 100%;background-image: url('https://i.pinimg.com/564x/d5/31/1f/d5311ff26712dbb9a459fb8890a32aa5.jpg');">
+        вапр
     </div>
 </body>
 
