перший на він 11

--- a/route.html
+++ b/route.html
@@ -43,6 +43,12 @@
         <div class="photo centring">
             <img src="images\asdf.png" alt="">
         </div>
+        <div class="photo centring">
+            <img src="images\asdf.png" alt="">
+        </div>
+        <div class="photo centring">
+            <img src="images\asdf.png" alt="">
+        </div>
         <div class="description  centringpading">
             <p>Содержание документа HTML5ь Харитін сватає Онисю й отримує разом із нею парафію її батька. Семінарист
                 Балабуха сватає Олесю й отримує разом із
@@ -98,13 +104,14 @@
                         <input name="userName" type="hidden" value="Жанна" />
                         <textarea onclick="textArea();" name="messageBox" rows="7"
                             cols="40">Добавте коментар...</textarea>
-                        <input type="button" name="print" onclick="addComent();" value="Додати коментар" />
+                        <button type="button" name="print" onclick="addComent();" >Додати коментар</button>
                     </form>
                 </div>
                 <div class="Comment">
                     <p>
                         тут текст комента
-                        <input type="button" name="delete" onclick="deleteComent(event);" value="Видалити коментар" />
+                        
+                        <button type="button" name="delete" onclick="deleteComent(event);" >Видалити коментар</button>
                     </p>
                 </div>
 
